# transponder

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  compose.prod.yml  docker-compose.yml  justfile  plan.md
.github/scripts/: read-coverage-metric.sh
.github/workflows/: ci.yml  coverage.yml
.opencode/agent/: reviewer.md
.opencode/command/: create-git-worktree.md  fix-issue.md
.opencode/skill/create-git-worktree/: SKILL.md
config/: default.toml  production.toml.example
deploy/: Caddyfile  production.env.example  transponder.service.example
docs/: deployment.md  marmot-push-v1-conformance.md  zeroization-plan.md
monitoring/prometheus/: prometheus.yml
scripts/: cargo-audit.sh
src/: app.rs  config.rs  defaults.rs  error.rs  lib.rs  main.rs  metrics.rs  rate_limiter.rs  redaction.rs  shutdown.rs  telemetry.rs  test_metrics.rs  test_support.rs  test_vectors.rs
src/crypto/: mod.rs  nip59.rs  token.rs
src/nostr/: client.rs  events.rs  mod.rs
src/nostr/events/: admission.rs  dedup.rs  mod.rs  processor.rs
src/push/: apns.rs  auth.rs  dispatcher.rs  fcm.rs  mod.rs  retry.rs
src/push/dispatcher/: health.rs  inflight.rs  mod.rs
src/server/: health.rs  mod.rs
tests/: generate_keys.rs
