[package]
name = "transponder"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
description = "Privacy-preserving push notification server implementing the MIP-05 specification"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full", "signal"] }

# Nostr
nostr-sdk = { version = "0.44", default-features = false, features = ["tor", "nip59"] }

# Cryptography
chacha20poly1305 = "0.10.1"
hkdf = "0.12.4"
sha2 = "0.10.9"
secp256k1 = { version = "0.29", features = ["rand", "std"] }

# Push notifications
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
jsonwebtoken = "9"

# Configuration
config = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }

# HTTP server (for health checks)
axum = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
thiserror = "2"
anyhow = "1.0"
base64 = "0.22"
hex = "0.4.3"
bytes = "1.11"

[dev-dependencies]
tokio-test = "0.4.5"
tempfile = "3"
nostr-relay-builder = "0.44"
getrandom = "0.3"
wiremock = "0.6"
