[package]
name = "transponder"
version = "0.2.0-alpha.3"
edition = "2024"
rust-version = "1.90"
description = "Privacy-preserving push notification server implementing Marmot Push v1"
license = "MIT"

[features]
default = []
tor = ["nostr-sdk/tor"]

[dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full", "signal"] }
# TaskTracker: tracks per-event processing tasks so in-flight gift-wrap unwrap
# work is joinable during graceful shutdown instead of being aborted.
tokio-util = { version = "0.7", features = ["rt"] }

# Nostr
nostr-sdk = { version = "0.44", default-features = false, features = ["nip59"] }

# Cryptography
chacha20poly1305 = "0.10.1"
# HKDF-SHA256 extract/expand is performed manually with `hmac` (already in the
# tree via hkdf) so the PRK lives in a `Zeroizing` buffer instead of un-erasable
# state inside an `Hkdf` value — see docs/zeroization-plan.md. The `hkdf` crate
# itself is now a dev-dependency (reference implementation for test vectors).
hmac = "0.12.1"
sha2 = "0.10.9"
secp256k1 = { version = "0.29", features = ["rand", "std"] }

# Push notifications
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls"] }
jsonwebtoken = "9"
# RFC 7231 HTTP-date parsing for the `Retry-After` header (already in the tree via hyper).
httpdate = "1.0.3"

# Configuration
config = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }

# Error reporting (GlitchTip, via the Sentry protocol).
# default-features = false drops native-tls: the release binary is a fully
# static musl build on a distroless runtime, so the transport must use rustls.
# We select `reqwest` (the HTTP transport) + `rustls-no-provider`, but NOT
# sentry's `transport` feature — an alias for `reqwest + native-tls` that would
# drag in OpenSSL. `reqwest` alone provides the default transport.
#
# `rustls-no-provider` (not `rustls`) keeps the whole build on ONE crypto
# provider. sentry's `rustls` feature pulls `aws-lc-rs` (a C/assembly library
# that needs cmake to build on musl), whereas the rest of the tree — nostr-sdk,
# jsonwebtoken, and our reqwest 0.12 client — already use `ring`. The GlitchTip
# transport client is built explicitly in `telemetry` with the `ring` provider
# and bundled webpki roots (see the reqwest13/rustls/webpki-roots deps below).
sentry = { version = "0.48", default-features = false, features = [
    "backtrace",
    "contexts",
    "panic",
    "reqwest",
    "rustls-no-provider",
    "tracing",
] }

# Build sentry's HTTP transport client with bundled webpki roots so GlitchTip TLS
# does not depend on the runtime image shipping a system CA store (the app's own
# reqwest 0.12 client above makes the same choice). `reqwest13` is aliased
# because the app client is 0.12; it must match sentry's reqwest 0.13 so the
# injected client type is identical. `rustls` builds the TLS config, and
# default-features = false keeps it on `ring` (its defaults would add aws-lc-rs).
reqwest13 = { package = "reqwest", version = "0.13", default-features = false, features = [
    "rustls-no-provider",
] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
webpki-roots = "1"

# HTTP server (for health checks)
axum = "0.8"
# Hardening middleware for the health/metrics listener: request timeout,
# request-body cap, and a global concurrency cap. Both crates are already in
# the dependency tree transitively (axum/nostr-sdk); features kept minimal.
tower = { version = "0.5", default-features = false, features = ["limit"] }
tower-http = { version = "0.6", default-features = false, features = ["limit", "timeout"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Metrics
prometheus = "0.14"

# Mechanical secret-pattern redaction for outgoing GlitchTip events
# (src/redaction.rs). Not a new build unit: already in the tree via
# sentry-backtrace.
regex = "1.12"

# Utilities
thiserror = "2"
zeroize = { version = "1.8", features = ["derive", "serde"] }
anyhow = "1.0"
base64 = "0.22"
hex = "0.4.3"
bytes = "1.11"
lru = "0.16"
rand = "0.9"

[dev-dependencies]
# Reference HKDF implementation for the encryption side of Marmot Push test
# vectors; cross-checks the manual extract/expand in crypto/token.rs.
hkdf = "0.12.4"
tokio-test = "0.4.5"
tempfile = "3"
nostr-relay-builder = "0.44"
getrandom = "0.3"
wiremock = "0.6"
